Fixed the header on mobile

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 .header-card {
     text-align: center;
-    height: 10vh;
+    height: 100%;
     width: 100%;
     text-align: right;
 }
